# verovio-android-demo

./: .gitignore  .gitmodules  LICENSE.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/verovio/android/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test-01.mei
app/src/main/cpp/: CMakeLists.txt  verovio-jni-exports.cpp
app/src/main/java/org/verovio/android/demo/: ContentView.kt  MainActivity.kt  VerovioModelView.kt  VerovioToolkitWrapper.kt
app/src/main/java/org/verovio/android/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/verovio/android/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
